--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1h>Hello HTML</h1h>
     <p> Neci to see you </p>
+    <img src="img/Щ_4_1_195x195.png" alt="SHISH">
 </body>
 </html>
