chenged img src

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1h>Hello HTML</h1h>
     <p> Neci to see you </p>
-    <img src="img/Щ_4_1_195x195.png" alt="SHISH">
+    <img src="img/Pez.jpeg" alt="painting">
 </body>
 </html>
